Migrate to PostGre for better Database Management